k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hostname-service
  namespace: elastisys
spec:
  selector:
    app: node-hostname-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
