k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-hostname-ingress
  namespace: elastisys
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: node.hostname.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-hostname-service
                port:
                  number: 3000
